Fixing problem with bluring the worklink on mobile and tablet

--- a/style.css
+++ b/style.css
@@ -1014,7 +1014,7 @@ footer a{
         display: none;
     }
 
-    .blured:hover{
+    .work-link:hover .blured{
         filter: none;
     }
 
